--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "amazon-backend-postgres",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
